fixed last item animation visibility.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,4 @@
-html{
+html, body{
     position: relative;
-}
-body {
-    overscroll-behavior: none;
+    overscroll-behavior: none; /* Prevent rubber band effect */
 }
